fix(global): no overflow hidden on body

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,5 +74,4 @@ body {
   margin: 0;
   padding: 0;
   font-family: inherit;
-  overflow-x: hidden;
 }
